--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script type="text/javascript">
 
 var slides = [
+  "slides/title.html",
   "slides/force_face.html",
   "remix/index.html",
   "slides/amanda_js_quote.html",
@@ -43,9 +44,9 @@ var slides = [
   "slides/simple_bubbles_custom_force_no_alpha.html",
   "slides/simulated_annealing_title.html",
   "slides/simulated_annealing.html",
+  "slides/alpha_blending_quote.html",
   "slides/alpha.html",
   "slides/alpha_out.html",
-  "slides/alpha_blending_quote.html",
   "slides/force_code_with_tick_function_centers_alpha.html",
   "slides/simple_bubbles_custom_force_alpha.html",
   "gates/index.html",
@@ -57,9 +58,11 @@ var slides = [
   "bubble_cloud/index.html",
   "slides/collide_pseudo_code.html",
   "slides/collide_code.html",
-  "slides/simple_bubbles_collide_brute.html",
   "slides/collision.html",
+  "bubble_cloud/index.html",
+  "slides/simple_bubbles_collide_brute.html",
   "slides/alpha_collision_quote.html",
+  "slides/collide_code_with_alpha.html",
   "slides/quadtree_title.html",
   "slides/quadtree_image.html",
   "slides/quadtree/index.html",
