--- a/slides/collision.html
+++ b/slides/collision.html
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
     <script type="text/javascript" src="../js/d3.v3.js"></script>
+    <script type="text/javascript" src="../js/slide.js"></script>
     <link type="text/css" rel="stylesheet" href="../css/style.css"/>
     <style type="text/css">
 
@@ -21,7 +22,7 @@ circle {
     </div>
     <script type="text/javascript">
 
-var w = 1024,
+var w = 960,
     h = 740;
 
 var nodes = d3.range(200).map(function() { return {radius: Math.random() * 12 + 4}; }),
