--- a/slides/layouts_quote.html
+++ b/slides/layouts_quote.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <blockquote>
-Layouts do not dictate a particular visual representation.
+In D3.js, layouts do not dictate a particular visual representation.
     </blockquote>
     <!-- <div class="author">- Mike Bostock</div> -->
  <!--Layouts are all abstract in the sense that they live in the data space.-->
