--- a/slides/collide_code.html
+++ b/slides/collide_code.html
@@ -26,26 +26,27 @@
     <script type="text/javascript" src="../js/slide.js"></script>
   </head>
   <body>
-    <h2>Collide</h2>
+    <h2></h2>
     <pre>
-      <code class="javascript" style="font-size: 85%;">
+      <code class="javascript" style="font-size: 75%;">
 
-function collide(alpha) {
-  return function(d) {
-    nodes.forEach(function(d2) {
-      if(d != d2) {
-        var x = d.x - d2.x;
-        var y = d.y - d2.y;
+function collide() {
+  return function(node1) {
+    nodes.forEach(function(node2) {
+      if(node1 != node2) {
+        var x = node1.x - node2.x;
+        var y = node1.y - node2.y;
         var distance = Math.sqrt(x * x + y * y);
 
-        var minDistance = d.size + d2.size + 3;
+        var minDistance = node1.size + node2.size + 3;
 
         if(distance < minDistance) {
-          var newDistance = ((distance - minDistance) / distance) * alpha;
-          d.x = d.x - (x * newDistance);
-          d.y = d.y - (y * newDistance);
-          d2.x = d2.x + (x * newDistance);
-          d2.y = d2.y + (y * newDistance);
+          var newDistance = 
+            ((distance - minDistance) / distance) / 2;
+          node1.x = node1.x - (x * newDistance);
+          node1.y = node1.y - (y * newDistance);
+          node2.x = node2.x + (x * newDistance);
+          node2.y = node2.y + (y * newDistance);
         }
       }
     });
