--- a/index.html
+++ b/index.html
@@ -64,13 +64,15 @@ var slides = [
   "slides/alpha_collision_quote.html",
   "slides/collide_code_with_alpha.html",
   "slides/quadtree_title.html",
+  "slides/quadtree_fun.html",
   "slides/quadtree_image.html",
   "slides/quadtree/index.html",
   "slides/quadtree_code.html",
   "bubble_cloud/index.html",
   "slides/word_cloud_quote.html",
-  "slides/custom_node_title.html",
-  "slides/force_images/index.html",
+  "slides/custom_nodes_title.html",
+  "slides/layouts_quote.html",
+  "slides/force_code_add_node.html",
   "slides/simple_bubbles_faces.html",
   "slides/force_states/index.html",
   "slides/nodes_and_edges_title.html",
