--- a/slides/force_with_edges_code_link_distance.html
+++ b/slides/force_with_edges_code_link_distance.html
@@ -13,7 +13,7 @@
   <body>
     <h2>Force With Edges</h2>
     <pre>
-      <code class="javascript">
+      <code class="javascript" style="font-size:75%;">
 // distance based on data!
 force
   .linkDistance( function(l) { return l.distance; });
