--- a/slides/force_with_edges_code_two.html
+++ b/slides/force_with_edges_code_two.html
@@ -13,12 +13,12 @@
   <body>
     <h2>Force With Edges</h2>
     <pre>
-      <code class="javascript">
+      <code class="javascript medium">
 
-  link.attr("x1", function(d) { return d.source.x; })
-    .attr("y1", function(d) { return d.source.y; })
-    .attr("x2", function(d) { return d.target.x; })
-    .attr("y2", function(d) { return d.target.y; });
+link.attr("x1", function(d) { return d.source.x; })
+  .attr("y1", function(d) { return d.source.y; })
+  .attr("x2", function(d) { return d.target.x; })
+  .attr("y2", function(d) { return d.target.y; });
       </code>
     </pre>
   </body>
