--- a/slides/link_data.html
+++ b/slides/link_data.html
@@ -11,14 +11,14 @@
     <script type="text/javascript" src="../js/slide.js"></script>
   </head>
   <body>
-    <h2>Link</h2>
+    <h2>Link Data</h2>
     <pre>
-      <code class="javascript">
+      <code class="javascript" style="font-size:85%;">
 // what goes into a link?
 {
   source: 0,     // nodes index or actual node
   target: 1
-  // ...        // your data
+  // ...        // other data
 }
 
       </code>
