--- a/slides/quadtree/index.html
+++ b/slides/quadtree/index.html
@@ -34,6 +34,7 @@
 </style>
 <body>
 <script src="../../js/d3.v3.min.js"></script>
+<script src="../../js/slide.js"></script>
 <script>
 
 var width = 960,
