--- a/slides/racial_divide/index.html
+++ b/slides/racial_divide/index.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/racial_divide.css">
   <script type="text/javascript">
-    var substeps = ['start', 'zoom_first', 'zoom_op', 'zoom_current', 'zoom_out'];
+    var substeps = ['start', 'zoom_first'];
   </script>
 
 	<script src="js/modernizr-2.0.6.min.js"></script>
