--- a/slides/force_images/index.html
+++ b/slides/force_images/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<script src="http://d3js.org/d3.v2.min.js?2.9.3"></script>
+<script src="../../js/d3.v3.min.js"></script>
+<script src="../../js/slide.js"></script>
 <style>
 
 .link {
