--- a/slides/force_with_edges_code.html
+++ b/slides/force_with_edges_code.html
@@ -15,17 +15,15 @@
     <pre>
       <code class="javascript">
   link = vis.selectAll("line.link")
-      .data(links);
-
-  // Enter any new links.
-  link.enter().insert("line", ".node")
-      .attr("class", "link")
-      .attr("x1", function(d) { return d.source.x; })
-      .attr("y1", function(d) { return d.source.y; })
-      .attr("x2", function(d) { return d.target.x; })
-      .attr("y2", function(d) { return d.target.y; });
+    .data(links)
+    .enter().append("line")
+    .attr("class", "link")
 
       </code>
     </pre>
   </body>
+    <!--.attr("x1", function(d) { return d.source.x; })-->
+    <!--.attr("y1", function(d) { return d.source.y; })-->
+    <!--.attr("x2", function(d) { return d.target.x; })-->
+    <!--.attr("y2", function(d) { return d.target.y; });-->
 </html>
