--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@ var slides = [
   "slides/simple_bubbles_with_edges.html",
   "slides/force_with_edges_code_link_distance.html",
   "slides/racial_divide/index.html",
+  "slides/remove_edges_title.html",
   "vote_studies/index.html",
   "slides/remove_links_code.html",
   "slides/custom_layouts_title.html",
