--- a/index.html
+++ b/index.html
@@ -89,9 +89,13 @@ var slides = [
   "slides/custom_layouts_title.html",
   "interactive_network_demo/index.html",
   "slides/custom_circle_layout_code.html",
+  "slides/custom_circle_layout_code_two.html",
+  "collaborations/index.html",
   "slides/macwright_math.html",
   "slides/cluster_force/index.html",
   "slides/cluster_force_code.html",
+  "gridexperiments/index.html",
+  "slides/force_labels/index.html",
   "slides/end.html"
 ];
 
