--- a/slides/remove_links_code.html
+++ b/slides/remove_links_code.html
@@ -13,7 +13,8 @@
   <body>
     <h2>Filter Links</h2>
     <pre>
-      <code class="javascript">
+      <code class="javascript" style="font-size: 90%;">
+// called when slider changes
 filteredLinks = filterLinks(allLinks);
 
 force.links(filterLinks);
