add expanding bubble slide

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@ var slides = [
   "slides/macwright_math.html",
   "slides/cluster_force/index.html",
   "slides/cluster_force_code.html",
+  "slides/expand_bubble.html",
   "gridexperiments/index.html",
   "slides/force_labels/index.html",
   "slides/end.html"
