added image slides. sources

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ var slides = [
   "slides/force_face.html",
   "remix/index.html",
   "slides/amanda_js_quote.html",
+  "slides/vaderpic.html",
   "slides/simple_force.html",
   "slides/nodes_array_code.html",
   "slides/force_code_one.html",
@@ -34,6 +35,7 @@ var slides = [
   "slides/simple_bubbles_with_charge.html",
   "gates/index.html",
   "slides/bubble_chart_intro.html",
+  "slides/starbabies.html",
   "slides/custom_force_title.html",
   "slides/implicit_position_quote.html",
   "gates/index.html",
@@ -53,6 +55,7 @@ var slides = [
   "slides/nyt_bubble_chart.html",
   "slides/multiple_forces_code.html",
   "slides/cool_force_layout_quote.html",
+  "slides/starcats.html",
   "slides/collision_title.html",
   "slides/nyt_bubble_cloud.html",
   "bubble_cloud/index.html",
@@ -70,6 +73,7 @@ var slides = [
   "slides/quadtree_code.html",
   "bubble_cloud/index.html",
   "slides/word_cloud_quote.html",
+  "slides/shock_crowd.html",
   "slides/custom_nodes_title.html",
   "slides/layouts_quote.html",
   "slides/force_code_add_node.html",
@@ -86,6 +90,7 @@ var slides = [
   "slides/remove_edges_title.html",
   "vote_studies/index.html",
   "slides/remove_links_code.html",
+  "slides/newspic.html",
   "slides/custom_layouts_title.html",
   "interactive_network_demo/index.html",
   "slides/custom_circle_layout_code.html",
@@ -94,10 +99,17 @@ var slides = [
   "slides/macwright_math.html",
   "slides/cluster_force/index.html",
   "slides/cluster_force_code.html",
+  "slides/free_congress.html",
+  "slides/free_congress_two.html",
   "slides/expand_bubble.html",
+  "slides/expand_bubble_code.html",
   "gridexperiments/index.html",
+  "slides/grid_code.html",
+  "slides/moritz.html",
   "slides/force_labels/index.html",
-  "slides/end.html"
+  "slides/vaderpic_two.html",
+  "slides/end.html",
+  "slides/sources.html"
 ];
 
     </script>
