--- a/slides/expand_bubble_code.html
+++ b/slides/expand_bubble_code.html
@@ -5,29 +5,30 @@
     <link type="text/css" rel="stylesheet" href="../css/style.css"/>
     <link type="text/css"  rel="stylesheet" href="../js/highlight.js/styles/tomorrow.css">
     <script type="text/javascript" src="../js/highlight.js/highlight.pack.js"></script>
-    <script type="text/javascript" src="../js/jquery-1.9.1.min.js"></script>
-    <script type="text/javascript" src="../js/jquery.highlight.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
-    <script type="text/javascript">
-      var substeps = ['highlight'];
-
-      function step(cur_step) {
-        if(cur_step == 'highlight') {
-          $('code').highlight('force')
-
-        } else if(cur_step == 'more') {
-        }
-      };
-    </script>
     
     <script type="text/javascript" src="../js/d3.v3.js"></script>
     <script type="text/javascript" src="../js/slide.js"></script>
   </head>
   <body>
-    <h2>Radial Layout</h2>
+    <h2>Expanding Bubble</h2>
     <pre>
-      <code class="javascript medium">
-      // show how to call the circle code
+      <code class="javascript">
+// on slider change
+var radius = getSliderValue();
+
+centerNode.attr("r", radius);
+
+force.charge(function(d, i) { 
+  if(d.fixed) {
+    return radius * -30;
+  } else {
+    return -4;
+  }
+});
+
+force.start();
+
       </code>
     </pre>
   </body>
