--- a/slides/grid_code.html
+++ b/slides/grid_code.html
@@ -5,29 +5,25 @@
     <link type="text/css" rel="stylesheet" href="../css/style.css"/>
     <link type="text/css"  rel="stylesheet" href="../js/highlight.js/styles/tomorrow.css">
     <script type="text/javascript" src="../js/highlight.js/highlight.pack.js"></script>
-    <script type="text/javascript" src="../js/jquery-1.9.1.min.js"></script>
-    <script type="text/javascript" src="../js/jquery.highlight.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
-    <script type="text/javascript">
-      var substeps = ['highlight'];
-
-      function step(cur_step) {
-        if(cur_step == 'highlight') {
-          $('code').highlight('force')
-
-        } else if(cur_step == 'more') {
-        }
-      };
-    </script>
     
     <script type="text/javascript" src="../js/d3.v3.js"></script>
     <script type="text/javascript" src="../js/slide.js"></script>
   </head>
   <body>
-    <h2>Radial Layout</h2>
+    <h2>Expanding Bubble</h2>
     <pre>
-      <code class="javascript medium">
-      // show how to call the circle code
+      <code class="javascript">
+
+node.each(function(d) {
+  gridpoint = FindNearestGridpoint(d)
+
+  d.screenX += (gridpoint.x - d.screenX) * .2;
+  d.screenY += (gridpoint.y - d.screenY) * .2;
+
+  d.x += (gridpoint.x - d.x) * .05;
+  d.y += (gridpoint.y - d.y) * .05;
+});
       </code>
     </pre>
   </body>
