remove some cruft. fix some typos

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ var slides = [
   "slides/nodes_array_code.html",
   "slides/force_code_one.html",
   "slides/layouts_quote.html",
-  "slides/node_data.html",
   "slides/force_code_add_node.html",
+  "slides/node_data.html",
   "slides/force_code_two.html",
   "slides/start_force.html",
   "slides/node_charge_code.html",
@@ -46,6 +46,7 @@ var slides = [
   "slides/simple_bubbles_custom_force_no_alpha.html",
   "slides/simulated_annealing_title.html",
   "slides/simulated_annealing.html",
+  "slides/starlava.html",
   "slides/alpha_blending_quote.html",
   "slides/alpha.html",
   "slides/alpha_out.html",
@@ -62,14 +63,15 @@ var slides = [
   "slides/collide_pseudo_code.html",
   "slides/collide_code.html",
   "slides/collision.html",
-  "bubble_cloud/index.html",
   "slides/simple_bubbles_collide_brute.html",
   "slides/alpha_collision_quote.html",
   "slides/collide_code_with_alpha.html",
+  "bubble_cloud/index.html",
   "slides/quadtree_title.html",
   "slides/quadtree_fun.html",
   "slides/quadtree_image.html",
   "slides/quadtree/index.html",
+  "slides/quadtree_pseudo_code.html",
   "slides/quadtree_code.html",
   "bubble_cloud/index.html",
   "slides/word_cloud_quote.html",
@@ -77,13 +79,16 @@ var slides = [
   "slides/custom_nodes_title.html",
   "slides/layouts_quote.html",
   "slides/force_code_add_node.html",
+  "slides/image_nodes_code.html",
   "slides/simple_bubbles_faces.html",
+  "slides/force_states_code.html",
   "slides/force_states/index.html",
   "slides/nodes_and_edges_title.html",
   "slides/simple_force.html",
   "slides/link_data.html",
   "slides/force_with_edges_code.html",
   "slides/force_with_edges_code_two.html",
+  "slides/force_with_edges_code_three.html",
   "slides/simple_bubbles_with_edges.html",
   "slides/force_with_edges_code_link_distance.html",
   "slides/racial_divide/index.html",
@@ -101,12 +106,13 @@ var slides = [
   "slides/cluster_force_code.html",
   "slides/free_congress.html",
   "slides/free_congress_two.html",
-  "slides/expand_bubble.html",
   "slides/expand_bubble_code.html",
+  "slides/expand_bubble.html",
   "gridexperiments/index.html",
   "slides/grid_code.html",
   "slides/moritz.html",
   "slides/force_labels/index.html",
+  "slides/force_label_code.html",
   "slides/vaderpic_two.html",
   "slides/end.html",
   "slides/sources.html"
