--- a/slides/end.html
+++ b/slides/end.html
@@ -7,13 +7,14 @@
     <script type="text/javascript" src="../js/slide.js"></script>
   </head>
   <body>
-    <h1>Using and Abusing the Force</h1>
-    <h1 style="font-size:80%;">Interesting applications of D3's force layout</h1>
+    <h1>THANKS!</h1>
     <p>
     Jim Vallandingham<br/>
 
     <br/>
     <a href="http://twitter.com/vlandham/">@vlandham</a><br>
+    <br/>
+    vallandingham.me
     </p>
   </body>
 </html>
