--- a/slides/expand_bubble.html
+++ b/slides/expand_bubble.html
@@ -22,7 +22,8 @@ line.link {
 }
 
 body {
-  background-color: #09217B;
+  /* background-color: #09217B; */
+  background-color: #0B486B;
 }
 
     </style>
@@ -146,7 +147,8 @@ g0 = vis.append("g")
 
 		c = g.append("circle")
 			.attr("r", r0)
-      .attr("fill", "#FFD05B");
+      // .attr("fill", "#FFD05B");
+      .attr("fill", "#F8CA00");
       /* .attr("fill", "#FF8C2E"); */
 
 
