--- a/slides/sources.html
+++ b/slides/sources.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <h1>Sources / References</h1>
-    <ul>
+    <ul style="font-size: 50%;">
       <li>Example Force Directed Network: http://bl.ocks.org/mbostock/4062045</li>
       <li>Everything is a Remix Videos: http://www.everythingisaremix.info/</li>
       <li>Amanda Cox Quote: http://blogs.hbr.org/hbr/hbreditors/2013/03/power_of_visualizations_aha_moment.html</li>
