--- a/slides/collide_pseudo_code.html
+++ b/slides/collide_pseudo_code.html
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="../js/slide.js"></script>
   </head>
   <body>
-    <h2>Collide</h2>
+    <h2>Collide Pseudocode</h2>
     <pre>
       <code class="javascript" style="font-size: 82%;">
 function collide(alpha) {
