--- a/slides/force_label_code.html
+++ b/slides/force_label_code.html
@@ -11,14 +11,11 @@
     <script type="text/javascript" src="../js/slide.js"></script>
   </head>
   <body>
-    <h2>Force With Edges</h2>
+    <h2>Force Labels</h2>
     <pre>
-      <code class="javascript medium">
-// in 'tick' function
-link.attr("x1", function(d) { return d.source.x; })
-  .attr("y1", function(d) { return d.source.y; })
-  .attr("x2", function(d) { return d.target.x; })
-  .attr("y2", function(d) { return d.target.y; });
+      <code class="javascript">
+// force label code
+
       </code>
     </pre>
   </body>
