--- a/slides/force_with_edges_code_three.html
+++ b/slides/force_with_edges_code_three.html
@@ -13,12 +13,10 @@
   <body>
     <h2>Force With Edges</h2>
     <pre>
-      <code class="javascript medium">
-// in 'tick' function
-link.attr("x1", function(d) { return d.source.x; })
-  .attr("y1", function(d) { return d.source.y; })
-  .attr("x2", function(d) { return d.target.x; })
-  .attr("y2", function(d) { return d.target.y; });
+      <code class="javascript">
+force
+  .linkDistance(80)
+  .linkStrength(1);
       </code>
     </pre>
   </body>
