--- a/slides/grid_code.html
+++ b/slides/grid_code.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="../js/slide.js"></script>
   </head>
   <body>
-    <h2>Expanding Bubble</h2>
+    <h2>Grid Layout</h2>
     <pre>
       <code class="javascript">
 
