--- a/slides/starlava.html
+++ b/slides/starlava.html
@@ -8,7 +8,7 @@
     <style type="text/css">
       body {
         background-color: #f6f2ec;
-        background-image: url('../img/chickfela_vader_1024x768.png');
+        background-image: url('../img/star_lava.png');
         background-repeat: no-repeat;
         background-size: 100% 100%;
         /* background-size: 1280px 800px; */
@@ -16,6 +16,5 @@
     </style>
   </head>
   <body>
-    <h2>Abuse The Force</h2>
   </body>
 </html>
