--- a/slides/node_charge_code.html
+++ b/slides/node_charge_code.html
@@ -13,7 +13,8 @@
 
       function step(cur_step) {
         if(cur_step == 'highlight') {
-          $('code').highlight('force')
+          $('code').highlight('charge')
+          $('code').highlight('gravity')
 
         } else if(cur_step == 'more') {
         }
