--- a/slides/node_data.html
+++ b/slides/node_data.html
@@ -14,6 +14,7 @@
     <h2>Data In Each Node</h2>
     <pre>
       <code class="javascript">
+// one node has:
 {
   x: 680.27,    // current location
   y: 401.73,
