--- a/slides/starbabies.html
+++ b/slides/starbabies.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="../js/slide.js"></script>
     <style type="text/css">
       body {
-        background-color: #f6f2ec;
+        background-color: #fff;
         background-image: url('../img/starbabies.png');
         background-repeat: no-repeat;
         background-size: 100% 100%;
