--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@ var slides = [
   "slides/force_face.html",
   "remix/index.html",
   "slides/amanda_js_quote.html",
-  "slides/vaderpic.html",
   "slides/simple_force.html",
   "slides/nodes_array_code.html",
   "slides/force_code_one.html",
@@ -27,6 +26,7 @@ var slides = [
   "slides/start_force.html",
   "slides/node_charge_code.html",
   "slides/start_force.html",
+  "slides/vaderpic.html",
   "slides/bubble_chart_title.html",
   "slides/nyt_bubble_chart.html",
   "slides/bubble_chart_code_one.html",
@@ -72,7 +72,7 @@ var slides = [
   "slides/quadtree_image.html",
   "slides/quadtree/index.html",
   "slides/quadtree_pseudo_code.html",
-  "slides/quadtree_code.html",
+  // "slides/quadtree_code.html",
   "bubble_cloud/index.html",
   "slides/word_cloud_quote.html",
   "slides/shock_crowd.html",
@@ -102,8 +102,8 @@ var slides = [
   "slides/custom_circle_layout_code_two.html",
   "collaborations/index.html",
   "slides/macwright_math.html",
-  "slides/cluster_force/index.html",
-  "slides/cluster_force_code.html",
+  // "slides/cluster_force/index.html",
+  // "slides/cluster_force_code.html",
   "slides/free_congress.html",
   "slides/free_congress_two.html",
   "slides/expand_bubble_code.html",
