add other options. clean out ideas.

--- a/index.html
+++ b/index.html
@@ -67,22 +67,22 @@ var slides = [
   "slides/alpha_collision_quote.html",
   "slides/collide_code_with_alpha.html",
   "bubble_cloud/index.html",
-  "slides/quadtree_title.html",
-  "slides/quadtree_fun.html",
-  "slides/quadtree_image.html",
-  "slides/quadtree/index.html",
-  "slides/quadtree_pseudo_code.html",
+  // "slides/quadtree_title.html",
+  // "slides/quadtree_fun.html",
+  // "slides/quadtree_image.html",
+  // "slides/quadtree/index.html",
+  // "slides/quadtree_pseudo_code.html",
   // "slides/quadtree_code.html",
-  "bubble_cloud/index.html",
+  // "bubble_cloud/index.html",
   "slides/word_cloud_quote.html",
   "slides/shock_crowd.html",
-  "slides/custom_nodes_title.html",
-  "slides/layouts_quote.html",
-  "slides/force_code_add_node.html",
-  "slides/image_nodes_code.html",
-  "slides/simple_bubbles_faces.html",
-  "slides/force_states_code.html",
-  "slides/force_states/index.html",
+  // "slides/custom_nodes_title.html",
+  // "slides/layouts_quote.html",
+  // "slides/force_code_add_node.html",
+  // "slides/image_nodes_code.html",
+  // "slides/simple_bubbles_faces.html",
+  // "slides/force_states_code.html",
+  // "slides/force_states/index.html",
   "slides/nodes_and_edges_title.html",
   "slides/simple_force.html",
   "slides/link_data.html",
@@ -97,6 +97,7 @@ var slides = [
   "slides/remove_links_code.html",
   "slides/newspic.html",
   "slides/custom_layouts_title.html",
+  "slides/layouts_quote.html",
   "interactive_network_demo/index.html",
   "slides/custom_circle_layout_code.html",
   "slides/custom_circle_layout_code_two.html",
