add some more pics

--- a/electro/index.html
+++ b/electro/index.html
@@ -1,12 +1,12 @@
 <html>
 <meta charset='utf8'>
 <title>Electro 2013</title>
-<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+<script src="../js/d3.v3.min.js" charset="utf-8"></script>
+<script src="../js/slide.js" charset="utf-8"></script>
 <script src="data.js"></script>
 <link rel="stylesheet" href="style.css">
 <div id="container">
   <svg></svg>
 </div>
-<a href="https://github.com/zjonsson/electro"><img style="position: absolute; top: 0; right: 0; border: 0;opacity:0.6" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 <script src="app.js"></script>
   
