--- a/index.html
+++ b/index.html
@@ -111,9 +111,14 @@ var slides = [
   "slides/expand_bubble.html",
   "gridexperiments/index.html",
   "slides/grid_code.html",
-  "slides/moritz.html",
-  "slides/force_labels/index.html",
-  "slides/force_label_code.html",
+  // "slides/moritz.html",
+  // "slides/force_labels/index.html",
+  // "slides/force_label_code.html",
+  "slides/obama_pres.html",
+  "electro/index.html",
+  "slides/disqus.html",
+  "slides/shape_library.html",
+
   "slides/vaderpic_two.html",
   "slides/end.html",
   "slides/sources.html"
