--- a/slides/bubble_chart_code_charge_function.html
+++ b/slides/bubble_chart_code_charge_function.html
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="../js/slide.js"></script>
   </head>
   <body>
-    <h2>Set Radius</h2>
+    <h2>Set Charge</h2>
     <pre>
       <code class="javascript" style="font-size: 85%;">
 var force = d3.layout.force()
