--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ var slides = [
   "slides/force_face.html",
   "remix/index.html",
   "slides/amanda_js_quote.html",
-  "slides/simple_force.html",
+  "slides/simple_force_no_links.html",
   "slides/nodes_array_code.html",
   "slides/force_code_one.html",
   "slides/layouts_quote.html",
@@ -40,7 +40,7 @@ var slides = [
   "slides/implicit_position_quote.html",
   "gates/index.html",
   "slides/node_data.html",
-  "slides/force_code_two.html",
+  "slides/force_code_two_no_steps.html",
   "slides/force_code_with_tick_function.html",
   "slides/force_code_with_tick_function_centers.html",
   "slides/simple_bubbles_custom_force_no_alpha.html",
@@ -62,8 +62,8 @@ var slides = [
   "bubble_cloud/index.html",
   "slides/collide_pseudo_code.html",
   "slides/collide_code.html",
-  "slides/collision.html",
   "slides/simple_bubbles_collide_brute.html",
+  "slides/collision.html",
   "slides/alpha_collision_quote.html",
   "slides/collide_code_with_alpha.html",
   "bubble_cloud/index.html",
@@ -105,6 +105,7 @@ var slides = [
   "slides/macwright_math.html",
   // "slides/cluster_force/index.html",
   // "slides/cluster_force_code.html",
+  "slides/expanding_bubble_title.html",
   "slides/free_congress.html",
   "slides/free_congress_two.html",
   "slides/expand_bubble_code.html",
