--- a/slides/alpha_blending_quote.html
+++ b/slides/alpha_blending_quote.html
@@ -19,7 +19,12 @@
     </script>
   </head>
   <body>
-    <blockquote>Alpha is a blending parameter, used to combine multiple forces acting on nodes.</blockquote>
+    <br/>
+    <br/>
+    <h1 style="font-size:110%"><strong>Alpha == Cooling Parameter</strong></h1>
+    <br/>
+    <br/>
+    <p>Alpha is a blending parameter, used to combine multiple forces acting on nodes.</p>
     <!-- <div class="author">- Mike Bostock</div> -->
   </body>
 </html>
