--- a/slides/collide_code.html
+++ b/slides/collide_code.html
@@ -9,15 +9,18 @@
     <script type="text/javascript" src="../js/jquery.highlight.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     <script type="text/javascript">
-      var substeps = ['highlight_charge', 'highlight'];
+      var substeps = ['highlight_charge', 'highlight', 'more'];
 
       function step(cur_step) {
         if(cur_step == 'highlight_charge') {
-          $('code').highlight('charge')
+          $('code').highlight('forEach');
         } else if(cur_step == 'highlight') {
-          $('code').highlight('d.amount')
+          $('code').unhighlight('forEach');
+          $('code').highlight('distance =', {caseSensitive: true});
 
         } else if(cur_step == 'more') {
+          $('code').unhighlight('distance =', {caseSensitive: true});
+          $('code').highlight('newDistance', {caseSensitive: true});
         }
       };
     </script>
