--- a/slides/force_code_two.html
+++ b/slides/force_code_two.html
@@ -6,6 +6,25 @@
     <link type="text/css"  rel="stylesheet" href="../js/highlight.js/styles/tomorrow.css">
     <script type="text/javascript" src="../js/highlight.js/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
+    <script type="text/javascript" src="../js/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="../js/jquery.highlight.js"></script>
+
+    <script type="text/javascript">
+      var substeps = ['highlight', 'more'];
+
+      function step(cur_step) {
+        if(cur_step == 'highlight') {
+          $('code').highlight('.x')
+          $('code').highlight('.y')
+
+        } else if(cur_step == 'more') {
+          $('code').unhighlight('.x')
+          $('code').unhighlight('.y')
+          $('code').highlight('cx')
+          $('code').highlight('cy')
+        }
+      };
+    </script>
     
     <script type="text/javascript" src="../js/d3.v3.js"></script>
     <script type="text/javascript" src="../js/slide.js"></script>
