--- a/slides/force_code_with_tick_function_centers.html
+++ b/slides/force_code_with_tick_function_centers.html
@@ -5,10 +5,32 @@
     <link type="text/css" rel="stylesheet" href="../css/style.css"/>
     <link type="text/css"  rel="stylesheet" href="../js/highlight.js/styles/tomorrow.css">
     <script type="text/javascript" src="../js/highlight.js/highlight.pack.js"></script>
+    <script type="text/javascript" src="../js/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="../js/jquery.highlight.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     
     <script type="text/javascript" src="../js/d3.v3.js"></script>
     <script type="text/javascript" src="../js/slide.js"></script>
+    <script type="text/javascript">
+      var substeps = ['highlight', 'more', 'cat', 'move'];
+
+      function step(cur_step) {
+        if(cur_step == 'highlight') {
+          $('code').highlight('categoryCenters')
+
+        } else if(cur_step == 'more') {
+          $('code').unhighlight('categoryCenters')
+          $('code').highlight('moveTowardCategoryCenter')
+        } else if (cur_step == 'cat') {
+          $('code').unhighlight('moveTowardCategoryCenter')
+          $('code').highlight('d.category')
+        } else if (cur_step == 'move') {
+          $('code').unhighlight('d.category')
+          $('code').highlight('d.x =')
+          $('code').highlight('d.y =')
+        }
+      };
+    </script>
   </head>
   <body>
     <h2></h2>
