--- a/slides/force_with_edges_code.html
+++ b/slides/force_with_edges_code.html
@@ -5,10 +5,22 @@
     <link type="text/css" rel="stylesheet" href="../css/style.css"/>
     <link type="text/css"  rel="stylesheet" href="../js/highlight.js/styles/tomorrow.css">
     <script type="text/javascript" src="../js/highlight.js/highlight.pack.js"></script>
+    <script type="text/javascript" src="../js/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="../js/jquery.highlight.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     
     <script type="text/javascript" src="../js/d3.v3.js"></script>
     <script type="text/javascript" src="../js/slide.js"></script>
+    <script type="text/javascript">
+      var substeps = ['highlight'];
+
+      function step(cur_step) {
+        if(cur_step == 'highlight') {
+          $('code').highlight('line')
+        }  else if(cur_step == 'more') {
+        }
+      };
+    </script>
   </head>
   <body>
     <h2>Force With Edges</h2>
