--- a/slides/vaderpic.html
+++ b/slides/vaderpic.html
@@ -16,6 +16,6 @@
     </style>
   </head>
   <body>
-    <h2>Abuse The Force</h2>
+    <h2 style="font-size: 120%;padding-right: 90px;font-weight:bold;">Abuse The Force</h2>
   </body>
 </html>
